# computacao-quantica-aplicada-ao-mercado-financeiro

./: QAOA_ket.ipynb  QAOA_myQLM.ipynb  README.md  pyproject.toml
data/: qaoa_1.xlsx  qaoa_10.xlsx  qaoa_11.xlsx  qaoa_12.xlsx  qaoa_13.xlsx  qaoa_14.xlsx  qaoa_15.xlsx  qaoa_16.xlsx  qaoa_17.xlsx  qaoa_18.xlsx  qaoa_19.xlsx  qaoa_2.xlsx  qaoa_20.xlsx  qaoa_3.xlsx  qaoa_4.xlsx  qaoa_5.xlsx  qaoa_6.xlsx  qaoa_7.xlsx  qaoa_8.xlsx  qaoa_9.xlsx
src/qaoa/: __init__.py
